# bipolar-flight-backend

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1daf868eb605_.py  5efc224e65da_.py  6fee43cbffd5_.py  702ddc99f53e_.py  94dc7605ab59_.py  9a6919682a0e_.py  a00d29f4877a_.py  bfb856c82797_.py  d109476f3f79_.py  e92aada782df_.py  fc4ffdd86a30_.py
app/: config.py  constants.py  database.py  main.py
app/api/: __init__.py
app/api/endpoints/: admin.py  auth.py  flight.py  user.py  users.py
app/auth/: dependencies.py  utils.py
app/crud/: admin.py  flight.py  ticket.py  user.py
app/database/: __init__.py  dependencies.py
app/models/: admin.py  flight.py  ticket.py  user.py
app/schemas/: admin.py  flight.py  message.py  ticket.py  user.py  users.py
